--- a/build.xml
+++ b/build.xml
@@ -16,13 +16,13 @@
     <target name="dist" depends="compile,revision">
         <jar destfile="${plugin.jar}" basedir="${plugin.build.dir}" manifestencoding="UTF-8">
             <manifest>
-                <attribute name="Author" value="Amanda McCann <amanda@technomancy.org>"/>
+                <attribute name="Author" value="Amanda McCann amanda@technomancy.org"/>
                 <attribute name="Plugin-Class" value="org.technomancy.openstreetmap.pterry.pTerryPlugin"/>
                 <attribute name="Plugin-Date" value="${version.entry.commit.date}"/>
                 <attribute name="Plugin-Description" value="Adds the clacks_overhead=GNU Terry Pratchett tag to all your changesets" />
                 <attribute name="Plugin-Mainversion" value="${plugin.main.version}"/>
-                <attribute name="Plugin-Version" value="v0.1.0"/>
-                <attribute name="Plugin-Canloadatruntime" value="true"/>
+                <attribute name="Plugin-Version" value="v0.2.1"/>
+                <attribute name="Plugin-Canloadatruntime" value="false"/>
 
             </manifest>
         </jar>
